--- a/Animals_WebAPI/appsettings.json
+++ b/Animals_WebAPI/appsettings.json
@@ -1,11 +1,34 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "System": "Error"
     }
-  },
+  }, 
   "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "System": "Error"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/animals_webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {username} {Message:lj{NewLine} {Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=MX-IT03869\\SQLEXPRESS2019;Initial Catalog=AnimalsDB;User ID=sa;Password=mxadmin1*;Pooling=False",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+    },
   "ConnectionStrings": {
     "ConnectionStr": "Data Source=MX-IT03869\\SQLEXPRESS2019;Initial Catalog=AnimalsDB;User ID=sa;Password=mxadmin1*;Pooling=False"
   }
